--- a/app/views/appeal/ldc/v4/lpaq/community-infrastructure-check.html
+++ b/app/views/appeal/ldc/v4/lpaq/community-infrastructure-check.html
@@ -9,9 +9,7 @@
   </span>
 
   {% set hintText %}
-    <p class="govuk-!-margin-bottom-2">
-      Tell us about any levy that is formally adopted or due to be adopted.
-    </p>
+<hint>Tell us about any levy that is formally adopted or due to be adopted.</hint>      
   {% endset -%}
 
   {{ govukRadios({
