--- a/app/views/appeal/ldc/v4/lpaq/confirmation.html
+++ b/app/views/appeal/ldc/v4/lpaq/confirmation.html
@@ -9,6 +9,7 @@
 
         {{ govukPanel({
           titleHtml: title}) }}
+        <p class="govuk-body">We’ve sent you a confirmation email.</p>  
 
        <h2 class="govuk-heading-m">
         What happens next
@@ -17,10 +18,7 @@
       <p class="govuk-body">
       You need to email a copy of your questionnaire and any documents you uploaded to the appellant.       </p>
 
-      <p class="govuk-body">
-        If you need to contact us, include your appeal reference number.
-      </p>
-
+     
       <p class="govuk-body govuk-!-margin-bottom-6">
         <a href="#" class="govuk-link govuk-link--no-visited-state">
           Download your questionnaire (PDF)
