--- a/app/views/appeal/ldc/v4/lpaq/inspector-access-appeal-site.html
+++ b/app/views/appeal/ldc/v4/lpaq/inspector-access-appeal-site.html
@@ -16,7 +16,7 @@
 {% endset -%}
 {% block questions %}
 
-  <span class="govuk-caption-l">{{serviceName}}</span>
+  <span class="govuk-caption-l">Site access</span>
 
   {{ govukRadios({
     name: "inspector-access-appeal-site",
