--- a/app/views/appeal/ldc/v4/lpaq/other-appeals.html
+++ b/app/views/appeal/ldc/v4/lpaq/other-appeals.html
@@ -3,12 +3,10 @@
 {% set title = 'Are there any other ongoing appeals next to, or close to the site?' %}
 
 {% block questions %}
-  <span class="govuk-caption-l">{{serviceName}}</span>
+  <span class="govuk-caption-l">Appeal process</span>
 
 
-  <!-- <span class="govuk-caption-l">
-    Appeal process
-  </span> -->
+
   {{ govukRadios({
     idPrefix: 'other-appeals',
     name: 'other-appeals',
