--- a/app/views/appeal/ldc/v4/lpaq/planning-officer-report.html
+++ b/app/views/appeal/ldc/v4/lpaq/planning-officer-report.html
@@ -20,7 +20,7 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <span class="govuk-caption-l">{{serviceName}}</span>
+    <span class="govuk-caption-l">Planning officer’s report and supporting documents</span>
     
     <form action="./planning-officer-report" method="post" novalidate>
 
