--- a/app/views/appeal/ldc/v4/lpaq/prefer-hearing.html
+++ b/app/views/appeal/ldc/v4/lpaq/prefer-hearing.html
@@ -4,7 +4,7 @@
 
 {% block questions %}
   <span class="govuk-caption-l">
-{{serviceName}}  </span>
+Appeal process</span>
 {% from "govuk/components/textarea/macro.njk" import govukTextarea %}
 
 {{ govukTextarea({
