--- a/app/views/appeal/ldc/v4/lpaq/task-list__po-report.html
+++ b/app/views/appeal/ldc/v4/lpaq/task-list__po-report.html
@@ -21,7 +21,7 @@
   {% set poReportInProgress = (poReportAnswered.length > 0 and poReportAnswered.length < poReportRequired.length) %}
 
   <h2 class="app-task-list__section">
-    2. Planning officer report
+    2. Planning officer’s report and supporting documents
     {% if poReportComplete %}
       {{ govukTag({
         text: "Completed",
