--- a/app/views/appeal/ldc/v4/lpaq/upload-other-relevant-matters.html
+++ b/app/views/appeal/ldc/v4/lpaq/upload-other-relevant-matters.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Are there any other relevant matters?' %}
+{% set title = 'Upload other relevant matters' %}
 {% set uploadDataKey = 'upload-other-relevant-matters' %}
 
 {% block questions %}
