--- a/app/views/appeal/ldc/v4/lpaq/health-and-safety.html
+++ b/app/views/appeal/ldc/v4/lpaq/health-and-safety.html
@@ -4,7 +4,7 @@
 
 {% block questions %}
   <span class="govuk-caption-l">
-    Tell us about the site
+    Site access
   </span>
   {% set textareaHTML %}
     {{ govukTextarea({
