--- a/app/views/appeal/ldc/v4/lpaq/inspector-enter-neighbour-site.html
+++ b/app/views/appeal/ldc/v4/lpaq/inspector-enter-neighbour-site.html
@@ -18,7 +18,7 @@
 
 {% block questions %}
 
-  <span class="govuk-caption-l">{{serviceName}}</span>
+  <span class="govuk-caption-l">Site access</span>
 
   {{ govukRadios({
     name: "inspector-enter-neighbour-site",
