updating task list to hide upload options that have not been shown to the user

--- a/app/views/appeal/ldc/v4/lpaq/add-another-appeal.html
+++ b/app/views/appeal/ldc/v4/lpaq/add-another-appeal.html
@@ -46,11 +46,11 @@
     items: [
       {
         html: 'Yes',
-        value: 'yes'
+        value: 'Yes'
       },
       {
         html: 'No',
-        value: 'no'
+        value: 'No'
       }
     ]
   }) }}
