--- a/app/views/appeal/ldc/v4/lpaq/certificate-type-check.html
+++ b/app/views/appeal/ldc/v4/lpaq/certificate-type-check.html
@@ -19,15 +19,15 @@
     },
     items: [
       {
-        value: "existing development",
+        value: "Existing development",
         text: "Existing development"
       },
         {
-        value: "proposed use of a development",
+        value: "Proposed use of a development",
         text: "Proposed use of a development"
       },
       {
-        value: "proposed changes to a listed building",
+        value: "Proposed changes to a listed building",
         text: "Proposed changes to a listed building"
       }
     ]
