--- a/app/views/appeal/ldc/v4/lpaq/community-infrastructure-check.html
+++ b/app/views/appeal/ldc/v4/lpaq/community-infrastructure-check.html
@@ -28,12 +28,12 @@
     items: [
       {
         html: 'Yes',
-        value: 'yes',
-        checked: checked('community-infrastructure-check','yes')
+        value: 'Yes',
+        checked: checked('community-infrastructure-check','Yes')
       },
       {
         html: 'No',
-        value: 'no',
+        value: 'No',
         checked: checked('community-infrastructure-check','no')
       }
     ]
