--- a/app/views/appeal/ldc/v4/lpaq/correct-appeal-type-check.html
+++ b/app/views/appeal/ldc/v4/lpaq/correct-appeal-type-check.html
@@ -33,11 +33,11 @@
         },
         items: [
           {
-            value: "yes",
+            value: "Yes",
             text: "Yes"
           },
           {
-            value: "no",
+            value: "No",
             text: "No",
             conditional: {
               html: reasonHtml
