--- a/app/views/appeal/ldc/v4/lpaq/enforcement-notice-date-application-check.html
+++ b/app/views/appeal/ldc/v4/lpaq/enforcement-notice-date-application-check.html
@@ -43,11 +43,11 @@ Applicants may apply for planning permission retrospectively, after the LPA has 
           },
           items: [
             {
-              value: "yes",
+              value: "Yes",
               text: "Yes"
             },
             {
-              value: "no",
+              value: "No",
               text: "No"
             }
           ]
