--- a/app/views/appeal/ldc/v4/lpaq/inspector-access-appeal-site.html
+++ b/app/views/appeal/ldc/v4/lpaq/inspector-access-appeal-site.html
@@ -29,14 +29,14 @@
     },
     items: [
       {
-        value: "yes",
+        value: "Yes",
         text: "Yes",
         conditional: {
         html: reasonHtml
         }
       },
         {
-        value: "no",
+        value: "No",
         text: "No"
       }
     ]
