--- a/app/views/appeal/ldc/v4/lpaq/appeal-invalid-check.html
+++ b/app/views/appeal/ldc/v4/lpaq/appeal-invalid-check.html
@@ -35,14 +35,14 @@
         },
         items: [
           {
-            value: "yes",
+            value: "Yes",
             text: "Yes",
             conditional: {
               html: reasonHtml
             }
           },
           {
-            value: "no",
+            value: "No",
             text: "No"
           }
         ]
