--- a/app/views/appeal/ldc/v4/lpaq/inspector-enter-neighbour-site.html
+++ b/app/views/appeal/ldc/v4/lpaq/inspector-enter-neighbour-site.html
@@ -31,14 +31,14 @@
     },
     items: [
       {
-        value: "yes",
+        value: "Yes",
         text: "Yes",
         conditional: {
           html: reasonHtml
         }
       },
       {
-        value: "no",
+        value: "No",
         text: "No"
       }
     ]
