--- a/app/views/appeal/ldc/v4/lpaq/other-relevant-matters.html
+++ b/app/views/appeal/ldc/v4/lpaq/other-relevant-matters.html
@@ -35,11 +35,11 @@
         },
         items: [
           {
-            value: "yes",
+            value: "Yes",
             text: "Yes"
           },
           {
-            value: "no",
+            value: "No",
             text: "No"
           }
         ]
