--- a/app/views/appeal/ldc/v4/lpaq/related-applications-check.html
+++ b/app/views/appeal/ldc/v4/lpaq/related-applications-check.html
@@ -19,11 +19,11 @@
     },
     items: [
       {
-        value: "yes",
+        value: "Yes",
         text: "Yes"
       },
         {
-        value: "no",
+        value: "No",
         text: "No"
       }
     ]
