--- a/app/views/appeal/ldc/v4/lpaq/task-list__constraints.html
+++ b/app/views/appeal/ldc/v4/lpaq/task-list__constraints.html
@@ -58,7 +58,7 @@
         { text: "Upload relevant planning permission", classes: "govuk-!-font-weight-bold govuk-!-width-one-third" },
         { text: data['upload-relevant-planning-permission'] if data['upload-relevant-planning-permission'] else "Not started", classes: "govuk-!-width-one-half" },
         { html: '<a href="upload-relevant-planning-permission" class="govuk-link">Change</a>' if data['upload-relevant-planning-permission'] else '<a href="upload-relevant-planning-permission" class="govuk-link">Upload</a>', classes: "govuk-!-text-align-right" }
-      ],
+      ]if data['planning-condition-check'] == 'Yes',
       [
         { text: "Enforcement notice date application", classes: "govuk-!-font-weight-bold govuk-!-width-one-third" },
         { text: data['enforcement-notice-date-application'] if data['enforcement-notice-date-application'] else "Not started", classes: "govuk-!-width-one-half" },
@@ -68,7 +68,7 @@
         { text: "Upload enforcement notice", classes: "govuk-!-font-weight-bold govuk-!-width-one-third" },
         { text: data['upload-enforcement-notice'] if data['upload-enforcement-notice'] else "Not started", classes: "govuk-!-width-one-half" },
         { html: '<a href="upload-enforcement-notice" class="govuk-link">Change</a>' if data['upload-enforcement-notice'] else '<a href="upload-enforcement-notice" class="govuk-link">Upload</a>', classes: "govuk-!-text-align-right" }
-      ],
+      ]if data['enforcement-notice-date-application'] == 'Yes',
       [
         { text: "Related applications", classes: "govuk-!-font-weight-bold govuk-!-width-one-third" },
         { text: data['related-applications'] if data['related-applications'] else "Not started", classes: "govuk-!-width-one-half" },
@@ -78,7 +78,7 @@
         { text: "Upload related applications", classes: "govuk-!-font-weight-bold govuk-!-width-one-third" },
         { text: data['upload-related-applications'] if data['upload-related-applications'] else "Not started", classes: "govuk-!-width-one-half" },
         { html: '<a href="upload-related-application" class="govuk-link">Change</a>' if data['upload-related-applications'] else '<a href="upload-related-application" class="govuk-link">Upload</a>', classes: "govuk-!-text-align-right" }
-      ],
+      ]if data['related-applications-check'] == 'Yes',
       [
         { text: "Appeal invalid", classes: "govuk-!-font-weight-bold govuk-!-width-one-third" },
         { text: data['appeal-invalid-check'] if data['appeal-invalid-check'] else "Not started", classes: "govuk-!-width-one-half" },
