fixing task list issues

--- a/app/views/appeal/ldc/v4/lpaq/related-applications-check.html
+++ b/app/views/appeal/ldc/v4/lpaq/related-applications-check.html
@@ -9,7 +9,7 @@
   <span class="govuk-caption-l">{{serviceName}}</span>
 
   {{ govukRadios({
-    name: "related-applications",
+    name: "related-applications-check",
     fieldset: {
       legend: {
         text: title,
